css/default.css
/* ... */
Combo-List-Item {
  color: inherit;
  background-color: transparent;
  background-image: none;
  text-decoration: none;
  text-shadow: none;
  padding: 6px 10px 6px 10px;
}

Combo-List-Item:hover, Combo-List-Item:even:hover  {
  color: #4a4a4a;
  background-color: #b5b5b5;
  background-image: gradient(
    linear, left top, left bottom,
    from( #ebebeb ),
    to( #d5d5d5 )
  );
}

Combo-List-Item:selected, Combo-List-Item:even:selected {
  color: #ffffff;
  background-color: #5882b5;
  background-image: gradient(
    linear, left top, left bottom,
    from( #5882b5 ),
    to( #416693 )
  );
}

Combo-Field {
  padding: 5px 10px 5px 10px;
}

Combo-FocusIndicator {
  background-color: transparent;
  border: none;
  margin: 0;
  opacity: 0;
}

/* DropDown default theme */

DropDown {
  border: 1px solid #4f7cb1;
  border-radius: 0;
  box-shadow: 0 0 5px #4f7cb1;
}

DropDown-Item {
  color: inherit;
  background-color: transparent;
  background-image: none;
  text-decoration: none;
  text-shadow: none;
  padding: 6px 10px 6px 10px;
}

DropDown-Item:hover {
  color: #4a4a4a;
  background-color: #b5b5b5;
  background-image: gradient(
    linear, left top, left bottom,
    from( #ebebeb ),
    to( #d5d5d5 )
  );
}

DropDown-Item:selected {
  color: #ffffff;
  background-color: #5882b5;
  background-image: gradient(
    linear, left top, left bottom,
    from( #5882b5 ),
    to( #416693 )
  );
}

/* CoolBar default theme */

CoolBar {
  background-image: none;
}

CoolItem-Handle {
  border: 1px solid #bdbdbd;
  width: 2px;
}

/* CTabFolder default theme */

CTabFolder {
  border-color: #bdbdbd;
  border-radius: 2px;
}

CTabItem {
  font: 14px Verdana, "Lucida Sans", Arial, Helvetica, sans-serif;
  color: #4a4a4a;
  background-color: transparent;
  background-image: none;
  padding: 6px 15px;
  spacing: 10px;
  text-shadow: none;
  text-decoration: none;
}

CTabItem:selected {
  color: #4a4a4a;
  background-color: #d6d6d6;
}

/* Do not gray out disabled CTabItems, this is SWT behavior */
CTabItem:disabled {
  color: black;
}

CTabFolder-DropDownButton-Icon {
  background-image: url( resource/widget/rap/ctabfolder/ctabfolder-dropdown.png );
}

CTabFolder-DropDownButton-Icon:hover {
  background-image: url( resource/widget/rap/ctabfolder/ctabfolder-dropdown-hover.png );
}

/* Group default theme */

Group {
  font: 10px Verdana, "Lucida Sans", Arial, Helvetica, sans-serif;
  color: #4a4a4a;
  background-color: #ffffff;
  border: none;
}

Group-Frame {
  margin: 20px 0 0 0;
  padding: 15px 8px 8px 8px;
  border: 1px solid #bdbdbd;
  border-radius: 2px;
}

Group-Label {
  padding: 2px 10px 2px 10px;
  background-color: #f0f0f0;
  background-image: none;
  background-repeat: repeat;
  background-position: left top;
  border: 1px solid #bdbdbd;
  border-radius: 10px;
  color: inherit;
  margin: 10px 10px 10px 20px;
  text-shadow: none;
}

/* Label default theme */

Label {
  font: 14px Verdana, "Lucida Sans", Arial, Helvetica, sans-serif;
  color: #4a4a4a;
  background-color: #ffffff;
  background-image: none;
  background-repeat: repeat;
  background-position: left top;
  border: none;
  border-radius: 0;
  text-decoration: none;
  cursor: default;
  opacity: 1;
  text-shadow: none;
}

Label[BORDER] {
  border: 1px solid #bdbdbd;
  border-radius: 2px;
}

Label-SeparatorLine {
  background-image: none;
  background-color: #d2d2d2;
  border: none;
  border-radius: 0;
  width: 2px;
}

/* Link default theme */

Link {
  font: 14px Verdana, "Lucida Sans", Arial, Helvetica, sans-serif;
  color: #4a4a4a;
  background-color: #ffffff;
  background-image: none;
  background-repeat: repeat;
  background-position: left top;
  text-shadow: none;
}

Link[BORDER] {
  border: 1px solid #bdbdbd;
}

Link-Hyperlink {
  color: #416693;
  text-shadow: none;
  text-decoration: none;
}

Link-Hyperlink:disabled {
  color: #959595;
}

Link-Hyperlink:hover {
  text-decoration: underline;
}

Link-Hyperlink:hover:disabled {
  color: #959595;
  text-decoration: none;
}

/* List default theme */

List {
  font: 14px Verdana, "Lucida Sans", Arial, Helvetica, sans-serif;
  background-color: #ffffff;
  border: none;
  color: #4a4a4a;
}

List[BORDER] {
  border: 1px solid #bdbdbd;
}

List-Item {
  padding: 5px 10px 5px 10px;
  font: 14px Verdana, "Lucida Sans", Arial, Helvetica, sans-serif;
  background-color: #ffffff;
  color: inherit;
  background-image: none;
  background-repeat: repeat;
  background-position: left top;
  text-shadow: none;
}

List-Item:hover {
  color: #4a4a4a;
  background-image: gradient(
    linear, left top, left bottom,
    from( #ebebeb ),
    to( #d5d5d5 )
  );
}

List-Item:selected {
  color: #ffffff;
  /* background-color property is used on the server to compute system color with id
     SWT.COLOR_LIST_SELECTION (see bug https://bugs.eclipse.org/bugs/show_bug.cgi?id=434191) */
  background-color: #00589f;
  background-image: gradient(
    linear, left top, left bottom,
    from( #5882b5 ),
    to( #416693 )
  );
}

List-Item:selected:unfocused {
  color: #ffffff;
  background-image: gradient(
    linear, left top, left bottom,
    from( #b5b5b5 ),
    to( #818181 )
  );
}

List-Item:even {
  background-color: #f0f0f0;
}

List-Item:even:hover {
  color: #4a4a4a;
  background-image: gradient(
    linear, left top, left bottom,
    from( #ebebeb ),
    to( #d5d5d5 )
  );
}

List-Item:even:selected {
  color: #ffffff;
  background-image: gradient(
    linear, left top, left bottom,
    from( #5882b5 ),
    to( #416693 )
  );
}

List-Item:even:selected:unfocused {
  color: #ffffff;
  background-image: gradient(
    linear, left top, left bottom,
    from( #b5b5b5 ),
    to( #818181 )
  );
}

List-GridLine {
  color: transparent;
}
/* ... */

